--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,3 +1,8 @@
+body {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .headerContainer {
 	background-color: mediumseagreen;
 	padding: 1rem;
