--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -12,3 +12,9 @@ body {
 .headerContainer h1 {
 	margin: 0;
 }
+
+.quote {
+	background-color: rgb(207, 207, 207);
+	padding: 1rem;
+	margin: 1rem;
+}
